# strategy_game

./: Cargo.toml  LICENSE  generate_amount_tiles_enum.sh  rustc-ice-2024-09-04T21_53_40-8939.txt  rustc-ice-2024-09-04T21_53_40-8940.txt  rustc-ice-2024-09-04T21_54_20-8994.txt  rustc-ice-2024-09-04T21_54_20-8995.txt  rustc-ice-2024-09-04T21_54_52-9036.txt  rustc-ice-2024-09-04T21_54_52-9037.txt  rustc-ice-2024-09-04T21_55_05-9095.txt  rustc-ice-2024-09-04T21_55_05-9096.txt  rustc-ice-2024-09-04T21_56_04-9153.txt  rustc-ice-2024-09-04T21_56_04-9154.txt  rustc-ice-2024-09-04T21_56_09-9206.txt  rustc-ice-2024-09-04T21_58_17-9277.txt  rustc-ice-2024-09-04T21_58_17-9278.txt  todo.md
.cargo/: config.toml
assets/save_files/scenarios/complex/: game_state.ron
assets/save_files/scenarios/complex/tile_types/forest/: tile_type_data.ron
assets/save_files/scenarios/complex/tile_types/urban/: tile_type.ron  tile_type_data.ron
assets/save_files/scenarios/complex/tile_types/water/: tile_type.ron  tile_type_data.ron
assets/save_files/scenarios/simple/: game_state.ron
assets/save_files/scenarios/simple/tile_types/forest/: tile_type_data.ron
assets/save_files/scenarios/simple/tile_types/road/: tile_type.ron
assets/save_files/scenarios/simple/unit_types/light_infantry/: unit_type.ron
assets/save_files/scenarios/test_map/: game_state.ron
assets/save_files/scenarios/test_map/tile_types/road/: tile_type_data.ron
dev_assets/tiles/: forest_tile.xcf  house_tile.xcf  road_tile.xcf  tile_template.xcf  water_tile.xcf
dev_assets/units/: light_infantry.xcf
src/: cleanup.rs  gameplay_maps.rs  lib.rs  main.rs  resources.rs  systems.rs
src/gameplay_plugin/: assets.rs  components.rs  mod.rs  resources.rs  save_file.rs  save_file_io.rs  systems.rs  tiles.rs
src/gameplay_plugin/camera_plugin/: components.rs  mod.rs  systems.rs
src/gameplay_plugin/in_game_plugin/: mod.rs
src/gameplay_plugin/in_game_plugin/camera_plugin/: components.rs  mod.rs  systems.rs
src/gameplay_plugin/loading_screen_plugin/: mod.rs  systems.rs
src/gameplay_plugin/loading_screen_plugin/load_game_plugin/: mod.rs  resources.rs  systems.rs
src/gameplay_plugin/resources/: mod.rs  radius_and_amount_tiles.rs
src/main_menu_plugin/: mod.rs  systems.rs
src/main_menu_plugin/in_main_menu_plugin/: mod.rs  systems.rs
src/main_menu_plugin/loading_screen_plugin/: mod.rs  systems.rs
