[workspace]
members = ["macros"]


[package]
name = "strategy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy-inspector-egui = "0.26.0"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.63"
itertools = "0.13.0"
derive_more = { version = "1.0.0", features = ["full"] }
bevy_egui = "0.29.0"
# For bevy_inspector integration: https://github.com/jakobhellermann/bevy-inspector-egui/blob/main/crates/bevy-inspector-egui/examples/integrations/side_panel.rs
bevy_window = "0.14.1"
bevy_utils = "0.14.1"
strum = "0.26.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
